[package]
name = "graml"
version = "0.1.0"
authors = ["Florian Marending <floriama@student.ethz.ch>"]

[lib]
name = "graml"
path = "src/lib.rs"

[[bin]]
name = "coloring"
path = "src/main.rs"

[dependencies]
rand = "*"
itertools = "0.7"
num_cpus = "1.0"
crossbeam = "0.5"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benchmark"
harness = false
